skeleton update